# ComfyUI-Auto_installer-Python

./: .coverage  .cursorrules  .dockerignore  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Install.bat  Install.sh  Migrate-from-PS.ps1  README.md  SECURITY.md  TODO.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest_out.txt  sitemap.xml
.github/workflows/: build-portable-bundle.yml  build-sageattention.yml  ci.yml  docker-publish.yml  docs.yml  integration.yml  sync-oneliner.yml
api/cli/: index.html
api/config/: index.html
api/downloader/engine/: index.html
api/installer/dependencies/: index.html
api/installer/environment/: index.html
api/installer/finalize/: index.html
api/installer/gpu_setup/: index.html
api/installer/install/: index.html
api/installer/nodes/: index.html
api/installer/optimizations/: index.html
api/installer/repository/: index.html
api/installer/system/: index.html
api/installer/updater/: index.html
api/platform/base/: index.html
api/platform/linux/: index.html
api/platform/macos/: index.html
api/platform/windows/: index.html
api/utils/commands/: index.html
api/utils/download/: index.html
api/utils/gpu/: index.html
api/utils/logging/: index.html
api/utils/model_scanner/: index.html
api/utils/packaging/: index.html
architecture/: index.html
bootstrap/: install.bat
changelog/: index.html
cli-commands/: index.html
codemaps/architecture/: index.html
codemaps/structure/: index.html
contributing/: index.html
docker/: index.html
docs/: architecture.md  cli-commands.md  docker.md  getting-started.md  index.md  migration.md
docs/api/: cli.md  config.md
docs/api/downloader/: engine.md
docs/api/installer/: dependencies.md  environment.md  finalize.md  gpu_setup.md  install.md  nodes.md  optimizations.md  repository.md  system.md  updater.md
docs/api/platform/: base.md  linux.md  macos.md  windows.md
docs/api/utils/: commands.md  download.md  gpu.md  logging.md  model_scanner.md  packaging.md
docs/codemaps/: structure.md
getting-started/: index.html
migration/: index.html
scripts/: banner.txt  custom_nodes.json  dependencies.json  umeairt_bundles.json
search/: search_index.json
security/: index.html
src/: __init__.py  cli.py  config.py  settings.py
src/downloader/: engine.py
src/installer/: __init__.py  dependencies.py  environment.py  finalize.py  install.py  nodes.py  optimizations.py  phase1.py  phase2.py  repository.py  system.py  updater.py
src/installer/templates/: launcher.bat.template  launcher.sh.template  tool.bat.template  tool.sh.template
src/platform/: base.py  linux.py  macos.py  windows.py
src/scripts/: __init__.py
src/tui/: __init__.py  app.py  helpers.py  theme.tcss
src/tui/screens/: __init__.py  download.py  home.py  info.py  install.py  launch.py  settings.py
src/utils/: commands.py  download.py  gpu.py  logging.py  model_scanner.py  packaging.py  python_info.py
tests/: conftest.py  test_checksums_integration.py  test_cli_smoke.py  test_config.py  test_dependencies_install.py  test_download.py  test_downloader.py  test_engine.py  test_environment.py  test_finalize.py  test_gpu.py  test_gpu_setup.py  test_install.py  test_integration.py  test_logging.py  test_macos_platform.py  test_model_scanner.py  test_nodes.py  test_nodes_extended.py  test_optimizations.py  test_packaging.py  test_platform.py  test_python_info.py  test_repository.py  test_system.py  test_updater.py
