[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/installer/templates/*.template"]

[project]
name = "comfyui-auto-installer"
version = "5.0.0-alpha.1"
description = "Cross-platform automated installer for ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "UmeAiRT" },
]
keywords = ["comfyui", "installer", "ai", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
comfyui-installer = "src.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]
