[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/installer/templates/*.template"]

# Bundle scripts/ config files into the wheel at src/scripts/
# so the wheel is self-contained (fix for issue #7).
# src/scripts/__init__.py is in the repo; the JSON/yml files come from scripts/ at build time.
[tool.hatch.build.targets.wheel.force-include]
"scripts/dependencies.json"      = "src/scripts/dependencies.json"
"scripts/custom_nodes.json"      = "src/scripts/custom_nodes.json"
"scripts/environment.yml"        = "src/scripts/environment.yml"
"scripts/nunchaku_versions.json" = "src/scripts/nunchaku_versions.json"
"scripts/comfy.settings.json"    = "src/scripts/comfy.settings.json"
"scripts/banner.txt"             = "src/scripts/banner.txt"

[project]
name = "umeairt-comfyui-installer"
version = "5.1.6"
description = "Cross-platform automated installer for ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "UmeAiRT" },
]
keywords = ["comfyui", "installer", "ai", "stable-diffusion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "picklescan>=0.0.14",
    "textual>=0.80",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
umeairt-comfyui-installer = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TC"]
ignore = ["B008"]  # typer requires function calls in argument defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
markers = [
    "integration: marks tests as heavy integration tests requiring internet and I/O (deselect with '-m \"not integration\"')"
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]
